// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchResultsTree /> expands tree nodes 1`] = `
<div>
  <li
    class="tree-item"
    role="option"
  >
    <button
      class="guided-answer__tree"
      id="search-result-tree-button"
    >
      <div
        class="guided-answer__tree__ul"
      >
        <h3
          class="guided-answer__tree__title"
        >
          Tree title
           
          
        </h3>
        <div
          class="bottom-section"
          id="bottom-section"
        >
          <span
            class="guided-answer__tree__desc"
          >
            Tree description
          </span>
          <div
            class="component-and-product-container"
            style="margin-top: 10px;"
          >
            <div
              class="guided-answer__tree__product"
              id="product-container"
            >
              <span
                class="bottom-title"
              >
                Product: 
              </span>
              product
            </div>
            <div
              class="guided-answer__tree__component"
              id="component-container"
            >
              <span
                class="bottom-title"
              >
                Component: 
              </span>
              component
            </div>
          </div>
        </div>
      </div>
    </button>
    <div
      class="guided-answer__search-results__node-list"
    >
      <hr
        class="guided-answer__search-results__separator"
      />
      <ul
        role="listbox"
      >
        <li
          class="guided-answer__search-results__node"
          role="option"
        >
          <button
            id="search-result-node-button"
          >
            <div
              class="guided-answer__search-results__node__indent"
            />
            <div>
              <h3
                class="guided-answer__search-results__node__title"
              >
                <span>
                  Node title 1
                </span>
                
              </h3>
              <p
                class="guided-answer__search-results__node__detail"
              >
                Node detail 1
              </p>
            </div>
          </button>
        </li>
      </ul>
      <a
        class="guided-answer__search-results__view-more"
        id="search-result-tree-expand-button"
      >
        <i
          aria-hidden="true"
          class="ts-icon root-105"
          data-icon-name="ContractNodesSmall"
        />
        <span />
      </a>
    </div>
  </li>
</div>
`;

exports[`<SearchResultsTree /> opens tree 1`] = `
<div>
  <li
    class="tree-item"
    role="option"
  >
    <button
      class="guided-answer__tree"
      id="search-result-tree-button"
    >
      <div
        class="guided-answer__tree__ul"
      >
        <h3
          class="guided-answer__tree__title"
        >
          Tree title
           
          
        </h3>
        <div
          class="bottom-section"
          id="bottom-section"
        >
          <span
            class="guided-answer__tree__desc"
          >
            Tree description
          </span>
          <div
            class="component-and-product-container"
            style="margin-top: 10px;"
          >
            <div
              class="guided-answer__tree__product"
              id="product-container"
            >
              <span
                class="bottom-title"
              >
                Product: 
              </span>
              product
            </div>
            <div
              class="guided-answer__tree__component"
              id="component-container"
            >
              <span
                class="bottom-title"
              >
                Component: 
              </span>
              component
            </div>
          </div>
        </div>
      </div>
    </button>
    <div
      class="guided-answer__search-results__node-list"
    >
      <hr
        class="guided-answer__search-results__separator"
      />
      <ul
        role="listbox"
      >
        <li
          class="guided-answer__search-results__node"
          role="option"
        >
          <button
            id="search-result-node-button"
          >
            <div
              class="guided-answer__search-results__node__indent"
            />
            <div>
              <h3
                class="guided-answer__search-results__node__title"
              >
                <span>
                  Node title
                </span>
                
              </h3>
              <p
                class="guided-answer__search-results__node__detail"
              >
                Node detail
              </p>
            </div>
          </button>
        </li>
      </ul>
    </div>
  </li>
</div>
`;

exports[`<SearchResultsTree /> opens tree node 1`] = `
<div>
  <li
    class="tree-item"
    role="option"
  >
    <button
      class="guided-answer__tree"
      id="search-result-tree-button"
    >
      <div
        class="guided-answer__tree__ul"
      >
        <h3
          class="guided-answer__tree__title"
        >
          Tree title
           
          
        </h3>
        <div
          class="bottom-section"
          id="bottom-section"
        >
          <span
            class="guided-answer__tree__desc"
          >
            Tree description
          </span>
          <div
            class="component-and-product-container"
            style="margin-top: 10px;"
          >
            <div
              class="guided-answer__tree__product"
              id="product-container"
            >
              <span
                class="bottom-title"
              >
                Product: 
              </span>
              product
            </div>
            <div
              class="guided-answer__tree__component"
              id="component-container"
            >
              <span
                class="bottom-title"
              >
                Component: 
              </span>
              component
            </div>
          </div>
        </div>
      </div>
    </button>
    <div
      class="guided-answer__search-results__node-list"
    >
      <hr
        class="guided-answer__search-results__separator"
      />
      <ul
        role="listbox"
      >
        <li
          class="guided-answer__search-results__node"
          role="option"
        >
          <button
            id="search-result-node-button"
          >
            <div
              class="guided-answer__search-results__node__indent"
            />
            <div>
              <h3
                class="guided-answer__search-results__node__title"
              >
                <span>
                  Node title
                </span>
                
              </h3>
              <p
                class="guided-answer__search-results__node__detail"
              >
                Node detail
              </p>
            </div>
          </button>
        </li>
      </ul>
    </div>
  </li>
</div>
`;

exports[`<SearchResultsTree /> renders without crashing 1`] = `
<div>
  <li
    class="tree-item"
    role="option"
  >
    <button
      class="guided-answer__tree"
      id="search-result-tree-button"
    >
      <div
        class="guided-answer__tree__ul"
      >
        <h3
          class="guided-answer__tree__title"
        >
          Tree title
           
          <i
            aria-hidden="true"
            class="ts-icon root-105"
            data-icon-name="StarActive"
          />
        </h3>
        <div
          class="bottom-section"
          id="bottom-section"
        >
          <span
            class="guided-answer__tree__desc"
          >
            Tree description
          </span>
          <div
            class="component-and-product-container"
            style="margin-top: 10px;"
          >
            <div
              class="guided-answer__tree__product"
              id="product-container"
            >
              <span
                class="bottom-title"
              >
                Product: 
              </span>
              product
            </div>
            <div
              class="guided-answer__tree__component"
              id="component-container"
            >
              <span
                class="bottom-title"
              >
                Component: 
              </span>
              component
            </div>
          </div>
        </div>
      </div>
    </button>
    <div
      class="guided-answer__search-results__node-list"
    >
      <hr
        class="guided-answer__search-results__separator"
      />
      <ul
        role="listbox"
      >
        <li
          class="guided-answer__search-results__node"
          role="option"
        >
          <button
            id="search-result-node-button"
          >
            <div
              class="guided-answer__search-results__node__indent"
            />
            <div>
              <h3
                class="guided-answer__search-results__node__title"
              >
                <span>
                  Node title
                </span>
                <i
                  aria-hidden="true"
                  class="ts-icon root-105"
                  data-icon-name="StarActive"
                />
              </h3>
              <p
                class="guided-answer__search-results__node__detail"
              >
                Node detail
              </p>
            </div>
          </button>
        </li>
      </ul>
    </div>
  </li>
</div>
`;
